Header-Section Completed

--- a/index.html
+++ b/index.html
@@ -1,13 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
-    <link rel="shortcut icon" href="images/Logo & Favicon/favicon_logo c4u.png" type="image/x-icon">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="main.css" />
+    <link
+      rel="shortcut icon"
+      href="images/Logo & Favicon/favicon_logo c4u.png"
+      type="image/x-icon"
+    />
     <title>Creatives For You</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <!-- this is Header-Section start -->
+    <section class="respScreen">
+      <div class="header-section">
+        <div class="logo">
+          <img src="images/Logo & Favicon/c4u full logo_2022 1.png" alt="" />
+        </div>
+        <div class="nav-bar">
+          <a class="nav-items" href="#">Home</a>
+          <a class="nav-item-2" href="#">About Us</a>
+          <a class="nav-items" href="#">Upskill</a>
+          <a class="nav-items" href="#">Contact Us</a>
+        </div>
+        <div>
+          <button class="header-section-button">Register Interest</button>
+        </div>
+      </div>
+    </section>
+    <!-- this is Header-Section end -->
+  </body>
 </html>
