Banner-Section Completed

--- a/index.html
+++ b/index.html
@@ -30,5 +30,45 @@
       </div>
     </section>
     <!-- this is Header-Section end -->
+
+    <!-- this is Banner-Section start -->
+    <section class="respScreen">
+      <div class="banner-section">
+        <div class="banner">
+          <img class="" src="images/Banner Section/Banner-BG.png" alt="" />
+          <img
+            class="banner-wave"
+            src="images/Banner Section/Wave.png"
+            alt=""
+          />
+        </div>
+        <div class="banner-div">
+          <div class="banner-d-1">
+            <p>Discover</p>
+            <span class="span-1">-</span>
+            <p>Interact</p>
+            <span class="span-1">-</span>
+            <p>Engage</p>
+          </div>
+          <div class="banner-d-2">
+            <p>Connecting <span class="span-1 underline">talent</span> to</p>
+            <p>
+              opportunity through <span class="span-1 underline">skills</span>
+            </p>
+          </div>
+          <div class="banner-d-3">
+            We forster a skill-focussed environment enabling students to
+            navigate their career with their self-paced learning journey and
+            businesses to gain market-ready talent.
+          </div>
+          <div class="banner-d-4">
+            <a href="#">
+              <button class="banner-button">Ask questions</button>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- this is Banner-Section end -->
   </body>
 </html>
