Card-Section Completed

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <title>Creatives For You</title>
   </head>
-  <body>
+  <body class="bg-[#F5F5F5]">
     <!-- this is Header-Section start -->
     <section class="respScreen">
       <div class="header-section">
@@ -65,7 +65,11 @@
     <section class="respScreen">
       <div class="banner-section">
         <div class="banner">
-          <img class="" src="images/Banner Section/Banner-BG.png" alt="" />
+          <img
+            class="w-full"
+            src="images/Banner Section/Banner-BG.png"
+            alt=""
+          />
           <img
             class="banner-wave"
             src="images/Banner Section/Wave.png"
@@ -101,6 +105,50 @@
     </section>
     <!-- this is Banner-Section end -->
 
+    <!-- this is Card-Section start -->
+    <section class="respScreen">
+      <div class="card-section">
+        <div class="card-div-1">
+          <div class="card-1">
+            At <span class="span-1 underline underline-offset-4">C4U</span>,
+            <br />
+            We Empower:
+          </div>
+        </div>
+
+        <div class="card-div-2">
+          <div class="card-2">
+            <img class="card-logo" src="images/Card Section/37.png" alt="" />
+            <p class="card-2-head">Students</p>
+            <p class="card-2-foot">
+              We help students find their way in a fast-evolving world by
+              creating a personalized learning journey guaranteed to help stand
+              out in a crowded job market.
+            </p>
+          </div>
+
+          <div class="card-2">
+            <img class="card-logo" src="images/Card Section/50.png" alt="" />
+            <p class="card-2-head">Universities</p>
+            <p class="card-2-foot">
+              We help your emerging talent to unlock their full potential by
+              combining education and work to create future-ready employees
+            </p>
+          </div>
+
+          <div class="card-2">
+            <img class="card-logo" src="images/Card Section/16.png" alt="" />
+            <p class="card-2-head">Businesses</p>
+            <p class="card-2-foot">
+              We enable businesses to tap into the diverse pool of emerging
+              talent cultivated by universities. To co-create the future
+              workforce and revitalize the business world.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- this is Card-Section end -->
     <script>
       const menuBtn = document.getElementById("menu-btn");
       const menu = document.getElementById("menu");
