About-Section Completed

--- a/index.html
+++ b/index.html
@@ -149,6 +149,106 @@
       </div>
     </section>
     <!-- this is Card-Section end -->
+
+    <!-- this is About-Section start -->
+    <section class="respScreen">
+      <section class="about-section">
+        <section class="about">
+          <div class="about-text">
+            <div class="md:w-2/3 w-full justify-center flex flex-col gap-2">
+              <p class="a-s-t-1">about us</p>
+              <p class="a-s-t-2">our mission</p>
+              <p class="a-s-t-3">
+                To create a personalized pathway for continuous learning and
+                transferrable skills development.
+              </p>
+              <a href="#">
+                <button class="a-s-button">
+                  Find out more
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                    class="size-4 stroke-2"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3"
+                    />
+                  </svg>
+                </button>
+              </a>
+            </div>
+          </div>
+
+          <div class="about-gellary">
+            <img class="a-v-g-img" src="images/About Section/Left.png" alt="" />
+          </div>
+        </section>
+
+        <img
+          class="h-full md:visible md:static invisible absolute"
+          src="images/About Section/Line and circle content.png"
+          alt=""
+        />
+
+        <img
+          class="absolute top-0 right-0"
+          src="images/About Section/Oval-1.png"
+          alt=""
+        />
+
+        <img
+          class="absolute bottom-0 right-0"
+          src="images/About Section/Oval-1.png"
+          alt=""
+        />
+
+        <section class="about">
+          <div class="about-gellary">
+            <img
+              class="a-m-g-img"
+              src="images/About Section/Right.png"
+              alt=""
+            />
+          </div>
+
+          <div class="about-text">
+            <div class="md:w-2/3 w-full justify-center flex flex-col gap-2">
+              <p class="a-s-t-1">about us</p>
+              <p class="a-s-t-2">our vision</p>
+              <p class="a-s-t-3">
+                To have a globally recognized strategic bridge between education
+                and the job market
+              </p>
+              <a href="#">
+                <button class="a-s-button">
+                  Contact us
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                    class="size-4 stroke-2"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3"
+                    />
+                  </svg>
+                </button>
+              </a>
+            </div>
+          </div>
+        </section>
+      </section>
+    </section>
+    <!-- this is About-Section end -->
     <script>
       const menuBtn = document.getElementById("menu-btn");
       const menu = document.getElementById("menu");
