Creative-Before-Section Completed

--- a/index.html
+++ b/index.html
@@ -249,6 +249,60 @@
       </section>
     </section>
     <!-- this is About-Section end -->
+
+    <!-- this Creative-Before-Section start -->
+    <section class="respScreen">
+      <div class="creative-before">
+        <div class="c-b-div">
+          <div class="relative space-y-4">
+            <img
+              class="c-b-logo"
+              src="images/Creative Section/Frame.png"
+              alt=""
+            />
+            <p class="c-b-text-1">Discover</p>
+            <img class="c-b-bg" src="images/Creative Section/1.png" alt="" />
+          </div>
+          <p class="c-b-text-2">
+            We uncover students unique skills to stand out a crowded job market
+          </p>
+        </div>
+
+        <div class="c-b-div">
+          <div class="relative space-y-4">
+            <img
+              class="c-b-logo"
+              src="images/Creative Section/Group.png"
+              alt=""
+            />
+            <p class="c-b-text-1">Interact</p>
+            <img class="c-b-bg" src="images/Creative Section/2.png" alt="" />
+          </div>
+          <p class="c-b-text-2">
+            We open doors to new opportunities by expanding your transferrable
+            skills
+          </p>
+        </div>
+
+        <div class="c-b-div">
+          <div class="relative space-y-4">
+            <img
+              class="c-b-logo"
+              src="images/Creative Section/Group (1).png"
+              alt=""
+            />
+            <p class="c-b-text-1">Engage</p>
+            <img class="c-b-bg" src="images/Creative Section/3.png" alt="" />
+          </div>
+          <p class="c-b-text-2">
+            To forester a skill focussed environment that enable students to
+            navigate their ideal career
+          </p>
+        </div>
+      </div>
+    </section>
+    <!-- this Creative-Before-Section end -->
+
     <script>
       const menuBtn = document.getElementById("menu-btn");
       const menu = document.getElementById("menu");
