Creative-After-Section Completed

--- a/index.html
+++ b/index.html
@@ -303,6 +303,108 @@
     </section>
     <!-- this Creative-Before-Section end -->
 
+    <!-- this is Creative-After-Section start -->
+    <section class="respScreen relative">
+      <img
+          class="absolute top-0"
+          src="images/Creative Section/Rectangle 32.png"
+          alt=""
+        />
+      <div class="creative-after">
+        <div class="c-a-div-1">
+          <p class="c-a-text">
+            The Creative Team <br />
+            behind <span class="span-1">the door</span>
+          </p>
+          <img src="images/Creative Section/Arrow_10.png" alt="" />
+        </div>
+
+        <div class="c-a-div-2">
+          <div class="c-a-card">
+            <div class="c-a-card-div">
+              <img
+                class="c-a-card-logo"
+                src="images/Creative Section/image 3.png"
+                alt=""
+              />
+              <p class="c-a-text-1">Ekta Mahajan</p>
+              <p class="c-a-text-2">Founder & C.E.O</p>
+              <img
+                class="c-a-img"
+                src="images/Creative Section/Group 26610.png"
+                alt=""
+              />
+            </div>
+
+            <img
+              class="c-a-bg-1"
+              src="images/Creative Section/Group 47269.png"
+              alt=""
+            />
+          </div>
+
+          <div class="c-a-card">
+            <div class="c-a-card-div">
+              <img
+                class="c-a-card-logo"
+                src="images/Creative Section/image 4.png"
+                alt=""
+              />
+              <p class="c-a-text-1">Toby Potter-Drake</p>
+              <p class="c-a-text-2">Product Manager Associate</p>
+              <img
+                class="c-a-img"
+                src="images/Creative Section/Group 26610.png"
+                alt=""
+              />
+            </div>
+          </div>
+
+          <div class="c-a-card">
+            <div class="c-a-card-div">
+              <img
+                class="c-a-card-logo"
+                src="images/Creative Section/image 2.png"
+                alt=""
+              />
+              <p class="c-a-text-1">Ross Davies</p>
+              <p class="c-a-text-2">Corporate Growth Associate</p>
+              <img
+                class="c-a-img"
+                src="images/Creative Section/Group 26610.png"
+                alt=""
+              />
+            </div>
+          </div>
+
+          <div class="c-a-card">
+            <div class="c-a-card-div">
+              <img
+                class="c-a-card-logo"
+                src="images/Creative Section/image 1.png"
+                alt=""
+              />
+              <p class="c-a-text-1">Leo crozier</p>
+              <p class="c-a-text-2">Software Developer</p>
+              <img
+                class="c-a-img"
+                src="images/Creative Section/Group 26610.png"
+                alt=""
+              />
+            </div>
+
+            <img
+              class="c-a-bg-2"
+              src="images/Creative Section/Group 47269.png"
+              alt=""
+            />
+          </div>
+
+        </div>
+      </div>
+    </section>
+    <!-- this is Creative-After-Section end -->
+
     <script>
       const menuBtn = document.getElementById("menu-btn");
       const menu = document.getElementById("menu");
