Footer-Section Completed

--- a/index.html
+++ b/index.html
@@ -405,6 +405,68 @@
     </section>
     <!-- this is Creative-After-Section end -->
 
+    <!-- this is Footer-Section start -->
+    <section class="respScreen">
+      <section class="footer-section">
+        <div class="footer-section-div-grid">
+          <div class="footer-section-div-1">
+            <div class="foot-s-div-1-head">
+              <img
+                class="md:scale-75 scale-75"
+                src="images/Footer Section/c4u full logo_2022 1.png"
+                alt=""
+              />
+            </div>
+            <div class="foot-s-div-1-bottom">
+              <p>Level39</p>
+              <p>One Canada Square</p>
+              <p>Canary Wharf</p>
+              <p>London</p>
+              <p>E145AB</p>
+            </div>
+          </div>
+  
+          <div class="footer-section-div-2">
+            <div class="foot-s-div-2-flexs">
+              <h3 class="foot-s-div-2-head">Home</h3>
+              <p>Collaborations</p>
+              <p>Statistics</p>
+              <p>How It Works</p>
+              <p>Testimonials</p>
+            </div>
+  
+            <div class="foot-s-div-2-flexs">
+              <h3 class="foot-s-div-2-head">About Us</h3>
+              <p>Who We Are</p>
+              <p>Mission statement</p>
+              <p>Our Vision</p>
+              <p>The Team</p>
+            </div>
+  
+            <div class="foot-s-div-2-flexs">
+              <h3 class="foot-s-div-2-head">Upskill</h3>
+              <p>It Support</p>
+              <p>Project Management</p>
+              <p>Data Analysts</p>
+              <p>Ux Design</p>
+            </div>
+  
+            <div class="foot-s-div-2-flexs">
+              <h3 class="foot-s-div-2-head">Contact Us</h3>
+              <p>Your message</p>
+              <p>Email</p>
+              <p>Phone number</p>
+              <p>Linkedin</p>
+            </div>
+          </div>
+        </div>
+  
+        <div class="footer-section-copyright">
+          Copyright 2022 Creatives For You LTD
+        </div>
+      </section>
+    </section>
+    <!-- this is Footer-Section end -->
     <script>
       const menuBtn = document.getElementById("menu-btn");
       const menu = document.getElementById("menu");
