Bug-Fixing Completed

--- a/index.html
+++ b/index.html
@@ -467,6 +467,8 @@
       </section>
     </section>
     <!-- this is Footer-Section end -->
+    
+    <!-- this is Script Section start -->
     <script>
       const menuBtn = document.getElementById("menu-btn");
       const menu = document.getElementById("menu");
@@ -475,5 +477,6 @@
         menu.classList.toggle("hidden");
       });
     </script>
+    <!-- this is Script Section end -->
   </body>
 </html>
